WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 203475
[Web Animations] getKeyframes() doesn't return the right timing function for declarative animations
https://bugs.webkit.org/show_bug.cgi?id=203475
Summary
[Web Animations] getKeyframes() doesn't return the right timing function for ...
Antoine Quint
Reported
2019-10-27 13:40:47 PDT
[Web Animations] getKeyframes() doesn't return the right timing function
Attachments
Patch
(9.48 KB, patch)
2019-10-27 13:44 PDT
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-10-27 13:44:00 PDT
Created
attachment 382034
[details]
Patch
Antoine Quint
Comment 2
2019-10-28 01:09:44 PDT
Committed
r251649
: <
https://trac.webkit.org/changeset/251649
>
Radar WebKit Bug Importer
Comment 3
2019-10-28 01:10:14 PDT
<
rdar://problem/56663170
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug